@@ -189,6 +189,9 @@ static const char *credits[] = {
 "",
 "",
 "C1""Backend Teams",
+"C1""Android",
+"C0""Angus Lees",
+"",
 "C1""Dreamcast",
 "C0""Marcus Comstedt",
 "",
